--- a/Week 3/3B_Convolutional_Neural_Networks_Assignment.ipynb
+++ b/Week 3/3B_Convolutional_Neural_Networks_Assignment.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,46 +48,15 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch.nn as nn\n",
-    "from tqdm.notebook import tqdm\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "\n",
     "train = torchvision.datasets.MNIST(root='./datasets/', transform=torchvision.transforms.ToTensor(), download=True, train=True)\n",
     "test = torchvision.datasets.MNIST(root='./datasets/', transform=torchvision.transforms.ToTensor(), download=True, train=False)\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(train, batch_size=100, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test, batch_size=100, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([100, 1, 28, 28]) torch.Size([100])\n"
-     ]
-    }
-   ],
-   "source": [
+    "test_loader = torch.utils.data.DataLoader(test, batch_size=100, shuffle=False)\n",
     "trainal, testal = next(iter(train_loader)) \n",
-    "print(trainal.shape, testal.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(trainal.shape, testal.shape)\n",
     "class CNN(nn.Module):\n",
     "\tdef __init__(self):\n",
     "\t\tsuper().__init__()\n",
@@ -103,40 +72,39 @@
     "\t\t\tnn.Conv2d(64, 64, kernel_size=3),\n",
     "\t\t\tnn.ReLU(),\n",
     "\t\t\tnn.MaxPool2d(kernel_size=2),\n",
-    "\t\t\tnn.Flatten()\n",
+    "\t\t\tnn.Flatten(),\n",
     "\t\t\tnn.Linear(1024, 256),\n",
-    "\t\t\tnn.ReLU()\n",
-    "\t\t\tnn.linear(256, 10)\n",
+    "\t\t\tnn.ReLU(),\n",
+    "\t\t\tnn.Linear(256, 10)\n",
     "\t\t\t)\n",
     "\n",
     "\tdef forward(self, x):\n",
     "\t\tout = self.layers(x)\n",
-    "\t\treturn out"
+    "\t\treturn out\n",
+    "model = CNN()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=.01)\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "loss_arr = []\n",
+    "\n",
+    "for epoch in range (10):\n",
+    "\tprint(f'EPOCH: {epoch}')\n",
+    "\tfor train, test in tqdm(train_loader):\n",
+    "\t\toptimizer.zero_grad()\n",
+    "\t\tx = train\n",
+    "\t\ty = model(x)\n",
+    "\t\tloss = loss_fn(y, test)\n",
+    "\t\tloss_arr.append(loss)\n",
+    "\t\tloss.backward()\n",
+    "\t\toptimizer.step()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 1024])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = torch.rand(1, 1, 28, 28)\n",
-    "model = CNN()\n",
-    "\n",
-    "y = model(x)\n",
-    "\n",
-    "y.shape"
+    "torch.save(model.state_dict(), 'model.pt')\t"
    ]
   },
   {
